# InstantInterface

./: CMakeLists.txt  InstantInterfaceConfig.cmake.in  LICENCE.md  README.md  gulpfile.js  package.json
app/: index.html
app/css/: main.css
app/js/: Slider.js  app.js
cmake/Modules/: FindRtMidi.cmake
src/InstantInterface/: AttributeManagement.cpp  AttributeManagement.h  Attributes.cpp  Attributes.h  Attributes.hpp  InterfaceManager.cpp  InterfaceManager.h  Midi.cpp  Midi.h  WebInterface.cpp  WebInterface.h
src/examples/: basic_interface.cpp  dynamic_configurations.cpp
test/: AttributeTest.cpp  DynamicConfigurationTest.cpp  StateParameterTest.cpp
